/*
Copyright (C) 2022 Jake Sanders

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU Affero General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU Affero General Public License for more details.

You should have received a copy of the GNU Affero General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
*/

syntax = "proto3";
package api.sign.v1;
option go_package = "github.com/jakexks/northfoot/api/sign/v1;signv1";

import "google/protobuf/duration.proto";

message SignRequest {
	int64 signer_id = 1;
	bytes csr = 2;
	optional google.protobuf.Duration duration_hint = 3;
}

message SignResponse {
	bytes cert = 1;
}

message TrustBundleRequest {
	int64 signer_id = 1;
}

message TrustBundleResponse {
	repeated bytes certs = 1;
}

service SignService {
	rpc Sign(SignRequest) returns (SignResponse);
	rpc TrustBundle(TrustBundleRequest) returns (TrustBundleResponse);
}
